# mcp-reddit

./: .env  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_reddit/: reddit_fetcher.py
